--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <main>
         <section class="board left active">
-            <p class="name p0-name">Player 1</p>
+            <p class="name p0-name"><input type="text" name='Text' id='name0' placeholder="Enter Name"></p>
             <p class="score p0-score">0</p>
             <div class="score-board p0-score-board">
                 <p>Current</p>
@@ -21,10 +21,11 @@
             </div>
         </section>
         <button class="button new-game"><i class="new-game-icon"></i> New Game </button>
+        <input type="text" id='max' placeholder="Enter max">
         <button class="button roll-dice"><i class="roll-dice-icon"></i>Roll Dice</button>
         <button class="button hold"><i class="hold-icon"></i>Hold</button>
         <section class="board right">
-            <p class="name p1-name ">Player 2</p>
+            <p class="name p1-name "><input type="text" name='Text' id='name1' placeholder="Enter Name"></p>
             <p class="score p1-score">0</p>
             <div class="score-board p1-score-board">
                 <p>Current</p>
